--- a/pages/event/tutorials.html
+++ b/pages/event/tutorials.html
@@ -43,10 +43,10 @@
   <header id="header"  class="header-fixed">
     <div class="container">
 
-      <div id="../../index.html" class="pull-left">
+      <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="#intro" class="scrollto"><img src="../../img/logo.png" alt="" title=""></a>
+        <a href="../../index.html" class="scrollto"><img src="../../img/logo.png" alt="" title=""></a>
       </div>
 
       <nav id="nav-menu-container">
