--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="intro-container wow fadeIn">
       <img src="img/ai-and-machine-learning.png" style="width: 20%">
       <h1 class="mb-4 pb-0">DEEP LEARNING <br><span class="up">IndabaX Morocco </span> </h1>
-      <p class="mb-4 pb-0">29-30 Avril 2019 <br> University of Hassan II Casablanca, Faculty of Sciences and Techniques (FST) of Mohammedia, Conference Center</p>
+      <p class="mb-4 pb-0">April 29-30, 2019 <br> University of Hassan II Casablanca, Faculty of Sciences and Techniques (FST) of Mohammedia, Conference Center</p>
       <a href="#about" class="about-btn scrollto">About The Event</a>
 
       <a href="#" class="poster-btn scrollto">Download poster</a>
