--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="intro-container wow fadeIn">
       <img src="img/ai-and-machine-learning.png" style="width: 20%">
       <h1 class="mb-4 pb-0">DEEP LEARNING <br><span class="up">IndabaX Morocco </span> </h1>
-      <p class="mb-4 pb-0">April 29-30, 2019 <br> University of Hassan II Casablanca, Faculty of Sciences and Techniques (FST) of Mohammedia, Conference Center</p>
+      <p class="mb-4 pb-0">April 29-30, 2019 <br> University of Hassan II Casablanca<br> Faculty of Sciences and Techniques (FST) of Mohammedia<br> Conference Center</p>
       <a href="#about" class="about-btn scrollto">About The Event</a>
 
       <a href="#" class="poster-btn scrollto">Download poster</a>
@@ -110,16 +110,23 @@
         <div class="row">
           <div class="col-lg-6">              
             <h2>About The Event</h2>
-            <p class="text-justify">Deep Learning IndabaX-Morocco is a two days event that will bring advanced knowledge
-                of Machine Learning and Deep Learning to students, researchers and industry professionals. The event will
-                 bring together experts from across the country to expose students
-                to state-of-the-art methods and practical skills.
-                IndabaX-Morrocco is a way to experiment with the ways in which we can strengthen
-                our Machine Learning community, and to allow more people to contribute to the con-
-                versation.
-                This event will be organized for the rst time in Morocco at the Faculty of Sciences
-                and Techniques of Mohammedia in order to spread knowledge and builds capacity in
-                machine learning.</p>
+            <p class="text-justify">
+<p>        
+Deep Learning IndabaX-Morocco is a two days event that will bring advanced knowledge of Machine Learning and Deep Learning to students, researchers and industry professionals. The event will bring together experts from across the country to expose students
+to state-of-the-art methods and practical skills.
+</p>
+<p>
+IndabaX-Morrocco is a way to experiment with the ways in which we can strengthen our Machine Learning community, and to allow more people to contribute to the conversation.
+</p>
+<p>
+This event will be organized for the first time in Morocco at the Faculty of Sciences and Techniques of Mohammedia (FSTM) in order to spread knowledge and builds capacity in machine learning.
+</p>
+<b>Objectives:</b>
+<ol>
+<li> Promote Artificial Intelligence in Universities and Companies.
+<li> Build a dynamic AI community to educate, connect and support AI practitioners.
+<li> Learn from researchers and industrials
+</ol>
           </div>
           <div class="col-lg-3">
             <h3>Where</h3>
@@ -127,7 +134,7 @@
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
-            <p>Monday to Tuesday<br>29-30 Avril 2019</p>
+            <p>Monday to Tuesday<br>April 29-30, 2019</p>
           </div>
         </div>
       </div>
@@ -319,6 +326,7 @@
                 of Machine Learning and Deep Learning to students, researchers and industry professionals. 
                 The event will bring together experts from across the country to expose students
                 to state-of-the-art methods and practical skills.
+              
                 IndabaX-Morrocco is a way to experiment with the ways in which we can strengthen
                 our Machine Learning community, and to allow more people to contribute to the con-
                 versation.
