--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ indabaxmorocco.github.io/index.html
           <div class="col-lg-6">              
             <h2>About The Event</h2>
             <p class="text-justify">
-<p class="text-justify">Deep Learning IndabaX-Morocco is a two days event that will bring advanced knowledge of Machine Learning and Deep Learning to students, researchers and industry professionals. The event will bring together experts from across the country to expose students
+Deep Learning IndabaX-Morocco is a two days event that will bring advanced knowledge of Machine Learning and Deep Learning to students, researchers and industry professionals. The event will bring together experts from across the country to expose students
 to state-of-the-art methods and practical skills.
 </p>
 <p class="text-justify">IndabaX-Morrocco is a way to experiment with the ways in which we can strengthen our Machine Learning community, and to allow more people to contribute to the conversation.
