--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
-Skip to content
- 
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- @indabaxmorocco Sign out
-0
-0 0 indabaxmorocco/indabaxmorocco.github.io
- Code  Issues 0  Pull requests 0  Projects 0  Wiki  Insights  Settings
-indabaxmorocco.github.io/index.html
-4819f7e  2 minutes from now
-@indabaxmorocco indabaxmorocco Update index.html
-@system1995 @indabaxmorocco
-     
-382 lines (332 sloc)  15.4 KB
 <!DOCTYPE html>
 <html lang="en">
 
@@ -111,7 +93,7 @@ indabaxmorocco.github.io/index.html
     <div class="intro-container wow fadeIn">
       <img src="img/ai-and-machine-learning.png" style="width: 20%">
       <h1 class="mb-4 pb-0">DEEP LEARNING <br><span class="up">IndabaX Morocco </span> </h1>
-      <p class="mb-4 pb-0">April 29-30, 2019 <br> University of Hassan II Casablanca<br> Faculty of Sciences and Techniques (FST) of Mohammedia</p>
+      <p class="mb-4 pb-0">April 29-30, 2019 <br> University of Hassan II Casablanca<br> Faculty of Sciences and Techniques (FST) of Mohammedia<br> </p>
       <a href="#about" class="about-btn scrollto">About The Event</a>
 
       <a href="#" class="poster-btn scrollto">Download poster</a>
@@ -128,14 +110,15 @@ indabaxmorocco.github.io/index.html
         <div class="row">
           <div class="col-lg-6">              
             <h2>About The Event</h2>
-            <p class="text-justify">
+            <p class="text-justify">        
 Deep Learning IndabaX-Morocco is a two days event that will bring advanced knowledge of Machine Learning and Deep Learning to students, researchers and industry professionals. The event will bring together experts from across the country to expose students
 to state-of-the-art methods and practical skills.
-</p>
-<p class="text-justify">IndabaX-Morrocco is a way to experiment with the ways in which we can strengthen our Machine Learning community, and to allow more people to contribute to the conversation.
-</p>
-<p class="text-justify">This event will be organized for the first time in Morocco at the Faculty of Sciences and Techniques of Mohammedia (FSTM) in order to spread knowledge and builds capacity in machine learning.
-</p>
+<br>
+IndabaX-Morrocco is a way to experiment with the ways in which we can strengthen our Machine Learning community, and to allow more people to contribute to the conversation.
+<br>
+This event will be organized for the first time in Morocco at the Faculty of Sciences and Techniques of Mohammedia (FSTM) in order to spread knowledge and builds capacity in machine learning.
+<br>
+<br>
 <b>Objectives:</b>
 <ol>
 <li> Promote Artificial Intelligence in Universities and Companies.
@@ -394,16 +377,3 @@ to state-of-the-art methods and practical skills.
 </body>
 
 </html>
-© 2019 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-Press h to open a hovercard with more details.
