--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -95,13 +95,12 @@
         <div class="container">
           <div class="section-header">
             <h2>committees</h2>
-            <p>Here are some of our speakers</p>
           </div> 
-          <h1>Researchers</h1>
+          <h1>General chairs</h1>
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 1" class="img-fluid">
+                <img src="../../img/speakers/Abdelhak.jpg" alt="Speaker 1" class="img-fluid">
                 <div class="details">
                   <h3><a href="speaker-details.html">Khalil mohammed</a></h3>
                   <p>Enseignant Chercheur, Faculté des sciences et techniques de Mohammedia</p>
@@ -114,7 +113,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/s200_abdellah.adib.jpg" alt="Speaker 2" class="img-fluid">
+                <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 2" class="img-fluid">
                 <div class="details">
                   <h3><a href="speaker-details.html">Adib Abdellah</a></h3>
                   <p>Enseignant Chercheur, Faculté des sciences et techniques de Mohammedia</p>
@@ -127,7 +126,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/Adil_Bouziri.jpg" alt="Speaker 3" class="img-fluid">
+                <img src="../../img/speakers/Redouane.jpg" alt="Speaker 3" class="img-fluid">
                 <div class="details">
                   <h3><a href="speaker-details.html">Bouziri Adil</a></h3>
                   <p>Enseignant Chercheur, Faculté des sciences et techniques de Mohammedia</p>
@@ -140,47 +139,14 @@
             </div>
           </div>
           <h1>Industry professionals</h1>
-          <div class="row">
-              <div class="col-lg-4 col-md-6">
-                <div class="speaker">
-                  <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 1" class="img-fluid">
-                  <div class="details">
-                    <h3><a href="speaker-details.html">Khalil mohammed</a></h3>
-                    <p>Enseignant Chercheur, Faculté des sciences et techniques de Mohammedia</p>
-                    <div class="social">
-                      <a href=""><i class="fa fa-google-plus"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6">
-                <div class="speaker">
-                  <img src="../../img/speakers/s200_abdellah.adib.jpg" alt="Speaker 2" class="img-fluid">
-                  <div class="details">
-                    <h3><a href="speaker-details.html">Adib Abdellah</a></h3>
-                    <p>Enseignant Chercheur, Faculté des sciences et techniques de Mohammedia</p>
-                    <div class="social">
-                      <a href=""><i class="fa fa-google-plus"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6">
-                <div class="speaker">
-                  <img src="../../img/speakers/Adil_Bouziri.jpg" alt="Speaker 3" class="img-fluid">
-                  <div class="details">
-                    <h3><a href="speaker-details.html">Bouziri Adil</a></h3>
-                    <p>Enseignant Chercheur, Faculté des sciences et techniques de Mohammedia</p>
-                    <div class="social">
-                      <a href=""><i class="fa fa-google-plus"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <h1>Program chairs</h1>
+          <h1>Tutorial chairs</h1>
+          <h1>Data Challenge chairs</h1>
+          <h1>3MT chairs</h1>
+          <h1>Sponsorship chairs</h1>
+          <h1>Publicity chairs</h1>
+          <h1>Technical program committee</h1>
+          <h1>Organizing committee</h1>
         </div>
   
       </section>
