--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -100,10 +100,10 @@
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/Abdelhak.jpg" alt="Speaker 1" class="img-fluid">
+                <img src="../../img/speakers/mahmoudi..jpg" alt="Speaker 1" class="img-fluid">
                 <div class="details">
-                  <h3><a href="speaker-details.html">Khalil mohammed</a></h3>
-                  <p>Enseignant Chercheur, Faculté des sciences et techniques de Mohammedia</p>
+                  <h3><a href="speaker-details.html">Abdelhak Mahmoudi</a></h3>
+                  <p>Mohammed V University</p>
                   <div class="social">
                     <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
@@ -115,8 +115,8 @@
               <div class="speaker">
                 <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 2" class="img-fluid">
                 <div class="details">
-                  <h3><a href="speaker-details.html">Adib Abdellah</a></h3>
-                  <p>Enseignant Chercheur, Faculté des sciences et techniques de Mohammedia</p>
+                  <h3><a href="speaker-details.html">Mohammed Khalil</a></h3>
+                  <p>Hassan II University</p>
                   <div class="social">
                     <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
@@ -126,10 +126,10 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/Redouane.jpg" alt="Speaker 3" class="img-fluid">
+                <img src="../../img/speakers/redouane.jpg" alt="Speaker 3" class="img-fluid">
                 <div class="details">
-                  <h3><a href="speaker-details.html">Bouziri Adil</a></h3>
-                  <p>Enseignant Chercheur, Faculté des sciences et techniques de Mohammedia</p>
+                  <h3><a href="speaker-details.html">Redouane Lguensat</a></h3>
+                  <p>Grenoble Alpes University</p>
                   <div class="social">
                     <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
@@ -138,9 +138,90 @@
               </div>
             </div>
           </div>
-          <h1>Industry professionals</h1>
           <h1>Program chairs</h1>
+          <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img src="../../img/speakers/mahmoudi..jpg" alt="Speaker 1" class="img-fluid">
+                <div class="details">
+                  <h3><a href="speaker-details.html">Abdelhak Mahmoudi</a></h3>
+                  <p>Mohammed V University</p>
+                  <div class="social">
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 2" class="img-fluid">
+                <div class="details">
+                  <h3><a href="speaker-details.html">Mohammed Khalil</a></h3>
+                  <p>Hassan II University</p>
+                  <div class="social">
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img src="../../img/speakers/redouane.jpg" alt="Speaker 3" class="img-fluid">
+                <div class="details">
+                  <h3><a href="speaker-details.html">Redouane Lguensat</a></h3>
+                  <p>Grenoble Alpes University</p>
+                  <div class="social">
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <h1>Tutorial chairs</h1>
+          <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img src="../../img/speakers/mahmoudi..jpg" alt="Speaker 1" class="img-fluid">
+                <div class="details">
+                  <h3><a href="speaker-details.html">Abdelhak Mahmoudi</a></h3>
+                  <p>Mohammed V University</p>
+                  <div class="social">
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 2" class="img-fluid">
+                <div class="details">
+                  <h3><a href="speaker-details.html">Mohammed Khalil</a></h3>
+                  <p>Hassan II University</p>
+                  <div class="social">
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img src="../../img/speakers/redouane.jpg" alt="Speaker 3" class="img-fluid">
+                <div class="details">
+                  <h3><a href="speaker-details.html">Redouane Lguensat</a></h3>
+                  <p>Grenoble Alpes University</p>
+                  <div class="social">
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <h1>Data Challenge chairs</h1>
           <h1>3MT chairs</h1>
           <h1>Sponsorship chairs</h1>
