--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -100,7 +100,7 @@
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/mahmoudi..jpg" alt="Speaker 1" class="img-fluid">
+                <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 1" class="img-fluid">
                 <div class="details">
                   <h3><a href="speaker-details.html">Abdelhak Mahmoudi</a></h3>
                   <p>Mohammed V University</p>
@@ -126,7 +126,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/redouane.jpg" alt="Speaker 3" class="img-fluid">
+                <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 3" class="img-fluid">
                 <div class="details">
                   <h3><a href="speaker-details.html">Redouane Lguensat</a></h3>
                   <p>Grenoble Alpes University</p>
@@ -142,7 +142,7 @@
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/mahmoudi..jpg" alt="Speaker 1" class="img-fluid">
+                <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 1" class="img-fluid">
                 <div class="details">
                   <h3><a href="speaker-details.html">Abdelhak Mahmoudi</a></h3>
                   <p>Mohammed V University</p>
@@ -168,7 +168,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/redouane.jpg" alt="Speaker 3" class="img-fluid">
+                <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 3" class="img-fluid">
                 <div class="details">
                   <h3><a href="speaker-details.html">Redouane Lguensat</a></h3>
                   <p>Grenoble Alpes University</p>
@@ -184,7 +184,7 @@
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/mahmoudi..jpg" alt="Speaker 1" class="img-fluid">
+                <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 1" class="img-fluid">
                 <div class="details">
                   <h3><a href="speaker-details.html">Abdelhak Mahmoudi</a></h3>
                   <p>Mohammed V University</p>
@@ -210,7 +210,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
-                <img src="../../img/speakers/redouane.jpg" alt="Speaker 3" class="img-fluid">
+                <img src="../../img/speakers/Mohammed_Khalil20.jpg" alt="Speaker 3" class="img-fluid">
                 <div class="details">
                   <h3><a href="speaker-details.html">Redouane Lguensat</a></h3>
                   <p>Grenoble Alpes University</p>
