--- a/pages/calls/demos.html
+++ b/pages/calls/demos.html
@@ -157,9 +157,10 @@
             </p>
             <h3>Important Dates</h3>
             <ul>
-              <li>March 29, 2019: Submission Deadline</li>
-              <li>April 10, 2019: Notifications of Acceptance</li>
-              <li>April 29, 2019: Tutorials day</li>
+              <li>March 17, 2019   :  Demo submission</li>
+              <li>March 31, 2019   :  Acceptance notification</li>
+              <li>April 14, 2019	 :  Registration</li>
+              <li>April 29-30, 2019:  Conference</li>
             </ul>
 
             <a
