Modify multiple files

--- a/pages/event/awards.html
+++ b/pages/event/awards.html
@@ -34,7 +34,6 @@
     License: https://bootstrapmade.com/license/
   ======================================================= -->
 </head>
-
 <body>
 
   <!--==========================
@@ -59,9 +58,9 @@
               </a>
               <div class="dropdown-menu">
                 <a class="dropdown-item"  href="committees.html">Committees</a>
-                <a class="dropdown-item active"  href="#">Keynotes</a>
+                <a class="dropdown-item"  href="keynotes.html">Keynotes</a>
                 <a class="dropdown-item"  href="tutorials.html">Tutorials</a>
-                <a class="dropdown-item"  href="Awards.html">Awards</a>
+                <a class="dropdown-item active"  href="#">Awards</a>
               </div>
           </li>
           <li class="dropdown">
@@ -87,31 +86,31 @@
 
 
   <main id="main" class="main-page">
-
-          <!--==========================
-      Keynotes Section
+     <!--==========================
+      Awards Section
     ============================-->
-    <section id="keynotes" class="wow fadeInUp">
-        <div class="container">
+    <section id="awards">
+        <div class="container wow fadeInUp">
           <div class="section-header">
-            <h2>Keynotes</h2>
-            <p>TBA</p>
-          </div> 
-          
-            <p>Keynotes lecture</p>
-          </div> 
+            <h2>Awards</h2>
+            <p>List of awards</p>
+          </div>
           <div class="container">
-              <p>
-              The conference will include keynote lectures of the following distinguished speakers:
-              </p><ul>
-                <li><strong>Prof. Adib Abdellah</strong>, Signal, Morocco</li>
-                <li><strong>Prof. Adib Abdellah</strong>, Signal, Morocco</li>
-                <li><strong>Prof. Adib Abdellah</strong>, Signal, Morocco</li>
+            <p> A number of awards will recognize the best X, X. </p>
+              <h4> <strong> Award1 : </strong> </h4>
+              <ul>
+                <li>CriticatOne</li>
+                <li>CriticatTwo</li>
+                <li>CriticatTree</li>
               </ul>
-              <span style="color: red;"><strong>more to be announced soon...</strong></span>
-              <p></p>
+              <h4> <strong> Award2 : </strong></h4>
+              <ul>
+                <li>CriticatOne</li>
+                <li>CriticatTwo</li>
+                <li>CriticatTree</li>
+              </ul>
            </div>
-       </div>
+        </div>
       </section>
     </main>
 
