--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -1,167 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>IndabaX Morocco</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="" name="keywords" />
+    <meta content="" name="description" />
 
-<head>
-  <meta charset="utf-8">
-  <title>IndabaX Morocco</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+    <!-- Favicons -->
+    <link href="../../img/icon.png" rel="icon" />
+    <link href="../../img/iconH.png" rel="apple-touch-icon" />
 
-  <!-- Favicons -->
-  <link href="../../img/icon.png" rel="icon">
-  <link href="../../img/iconH.png" rel="apple-touch-icon">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
+      rel="stylesheet"
+    />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
+    <!-- Bootstrap CSS File -->
+    <link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- Bootstrap CSS File -->
-  <link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Libraries CSS Files -->
+    <link
+      href="../../lib/font-awesome/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <link href="../../lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="../../lib/venobox/venobox.css" rel="stylesheet" />
+    <link
+      href="../../lib/owlcarousel/assets/owl.carousel.min.css"
+      rel="stylesheet"
+    />
 
-  <!-- Libraries CSS Files -->
-  <link href="../../lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="../../lib/animate/animate.min.css" rel="stylesheet">
-  <link href="../../lib/venobox/venobox.css" rel="stylesheet">
-  <link href="../../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <!-- Main Stylesheet File -->
+    <link href="../../css/style.css" rel="stylesheet" />
 
-  <!-- Main Stylesheet File -->
-  <link href="../../css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
+    <!-- =======================================================
     Theme Name: TheEvent
     Theme URL: https://bootstrapmade.com/theevent-conference-event-bootstrap-template/
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
-</head>
-<body>
-
-  <!--==========================
+  </head>
+  <body>
+    <!--==========================
     Header
   ============================-->
-  <header id="header"  class="header-fixed">
-    <div class="container">
+    <header id="header" class="header-fixed">
+      <div class="container">
+        <div id="logo" class="pull-left">
+          <!-- Uncomment below if you prefer to use a text logo -->
+          <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
+          <a href="../../index.html" class="scrollto"
+            ><img src="../../img/logo.png" alt="" title=""
+          /></a>
+        </div>
 
-      <div id="logo" class="pull-left">
-        <!-- Uncomment below if you prefer to use a text logo -->
-        <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="../../index.html" class="scrollto"><img src="../../img/logo.png" alt="" title=""></a>
+        <nav id="nav-menu-container">
+          <ul class="nav-menu">
+            <li><a href="../../index.html">Home</a></li>
+
+            <li class="dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                data-toggle="dropdown"
+                href="#"
+                role="button"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Event
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="../event/committees.html"
+                  >Committees</a
+                >
+                <a class="dropdown-item" href="../event/keynotes.html"
+                  >Keynotes</a
+                >
+                <a class="dropdown-item" href="../event/tutorials.html"
+                  >Tutorials</a
+                >
+                <a class="dropdown-item" href="../event/awards.html">Awards</a>
+              </div>
+            </li>
+            <li class="dropdown menu-active">
+              <a
+                class="nav-link dropdown-toggle"
+                data-toggle="dropdown"
+                href="#"
+                role="button"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Calls
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="papers.html">Call for papers</a>
+                <a class="dropdown-item active" href="#">Call for 3MT</a>
+                <a class="dropdown-item" href="dataChallenge.html"
+                  >Call for Data challenge</a
+                >
+                <a class="dropdown-item" href="tutorials.html">Call for Tutorials</a>
+              </div>
+            </li>
+            <li><a href="../program.html">Program</a></li>
+            <li><a href="../registration.html">Registration</a></li>
+            <li><a href="../sponsorship.html">Sponsorship</a></li>
+            <li><a href="../venue.html">Venue</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <!-- #nav-menu-container -->
       </div>
+    </header>
+    <!-- #header -->
 
-      <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          <li><a href="../../index.html">Home</a></li>
-
-          <li class="dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown"
-               href="#" role="button" aria-haspopup="true" aria-expanded="false"> Event
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item"  href="../event/committees.html">Committees</a>
-                <a class="dropdown-item"  href="../event/keynotes.html">Keynotes</a>
-                <a class="dropdown-item"  href="../event/tutorials.html">Tutorials</a>
-                <a class="dropdown-item"  href="../event/awards.html">Awards</a>
-              </div>
-          </li>
-          <li class="dropdown menu-active">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown"
-               href="#" role="button" aria-haspopup="true" aria-expanded="false"> Calls
-              </a>
-              <div class="dropdown-menu">
-                  <a class="dropdown-item"  href="papers.html">Call for papers</a>
-                  <a class="dropdown-item active"  href="#">Call for 3MT</a>
-                  <a class="dropdown-item"  href="dataChallenge.html">Call for Data challenge</a>
-                  <a class="dropdown-item"  href="demos.html">Call for demos</a>
-                  <a class="dropdown-item"  href="Sponsorship.html">Call for Sponsorship</a>
-              </div>
-          </li>
-          <li><a href="../program.html">Program</a></li>
-          <li><a href="../registration.html">Registration</a></li>
-          <li><a href="../venue.html">Venue</a></li>
-          <li><a href="../contact.html">Contact</a></li>
-        </ul>
-      </nav><!-- #nav-menu-container -->
-    </div>
-  </header><!-- #header -->
-
-
-  <main id="main" class="main-page">
-     <!--==========================
+    <main id="main" class="main-page">
+      <!--==========================
       papers Section
     ============================-->
-    <section id="awards">
+      <section id="awards">
         <div class="container wow fadeInUp">
           <div class="section-header">
-            <h2>test</h2>
-            <p>test</p>
+            <h2>Call for 3 Minutes Thesis (3MT)</h2>
+          </div>
+          <div class="section-content">
+            <p>
+              If you are devoting or have devoted 3 or more years to your PhD,
+              you could devote 3 minutes to explain it to a more general public,
+              we challenge you!!
+            </p>
+            <p>
+              PhD students have three minutes to present their thesis and its
+              significance. It is an exercise for students to consolidate their
+              ideas so they can present them concisely to an audience
+              specialized in Machine learning. Together with scientific and
+              technical quality, IndabaX-Morocco wants to promote transversal
+              skills of PhD researchers such as oral and presentation skills,
+              also it wants to help PhDs to gain visibility of their work.
+            </p>
+            <p>
+              The presentation should be evident in all components of
+              communications, from the content to the format, and from the
+              imagery to the tone of voice.
+            </p>
+            <p>
+              The winner of the 3MT contest will opt a prize that will be
+              announced soon.
+            </p>
+            <p>
+              If you want to participate you just have to follow these rules for
+              competition. The 3MT competition will be performed according to
+              the following basic rules:
+              <li>Eligibility: any PhD student</li>
+              <li>
+                Every participant is required to submit a 1 page summary of his
+                PhD on googleform.
+              </li>
+            </p>
+            <p>
+              Each participant with an accepted summary will be contacted to
+              create a video that best explains his work in a language
+              appropriate to a general audience. The video should not be longer
+              than 3 minutes.
+            </p>
+
+            <h3>Important Dates</h3>
+            <ul>
+              <li>March 17, 2019 : Summary submission</li>
+              <li>March 31, 2019 : Acceptance notification</li>
+              <li>April 14, 2019 : Registration</li>
+              <li>April 29-30, 2019 : Conference</li>
+            </ul>
+
+            <a
+              href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
+              class="btn btn-outline-primary btn-lg"
+              >Apply for 3MT</a
+
           </div>
         </div>
       </section>
     </main>
 
-  <!--==========================
+    <!--==========================
     Footer
   ============================-->
-  <footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6 footer-info">
-            <img src="../../img/logo.png" alt="TheEvenet">
-            <p class="text-justify">
-                Deep Learning IndabaX-Morocco is a two days event that will bring advanced knowledge
-                of Machine Learning and Deep Learning to students, researchers and industry professionals. 
-                The event will bring together experts from across the country to expose students
-                to state-of-the-art methods and practical skills.
-                IndabaX-Morrocco is a way to experiment with the ways in which we can strengthen
-                our Machine Learning community, and to allow more people to contribute to the con-
-                versation.
-                This event will be organized for the rst time in Morocco at the Faculty of Sciences
-                and Techniques of Mohammedia in order to spread knowledge and builds capacity in
-                machine learning.
-            </p>
-          </div>
+    <footer id="footer">
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6 footer-info">
+              <img src="../../img/logo.png" alt="TheEvenet" />
+              <p class="text-justify">
+                Deep Learning IndabaX-Morocco is a two days event that will
+                bring advanced knowledge of Machine Learning and Deep Learning
+                to students, researchers and industry professionals. The event
+                will bring together experts from across the country to expose
+                students to state-of-the-art methods and practical skills.
+                IndabaX-Morrocco is a way to experiment with the ways in which
+                we can strengthen our Machine Learning community, and to allow
+                more people to contribute to the con- versation. This event will
+                be organized for the rst time in Morocco at the Faculty of
+                Sciences and Techniques of Mohammedia in order to spread
+                knowledge and builds capacity in machine learning.
+              </p>
+            </div>
 
-          <div class="col-sm-3">
-          </div>
-          <div class="col-sm-3">
-            <h4>Contact Us</h4>
-            <p>
-              Department of Informatics <br>
-              FST Mohammedia<br>
-              Morocco <br>
-              <strong>Phone:</strong> +212 61 89 55 48 85<br>
-              <strong>Email:</strong> indabaXmorocco@gmail.com<br>
-            </p>
-            <div class="social-links">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-3">
+              <h4>Contact Us</h4>
+              <p>
+                Department of Informatics <br />
+                FST Mohammedia<br />
+                Morocco <br />
+                <strong>Phone:</strong> +212 61 89 55 48 85<br />
+                <strong>Email:</strong> indabaXmorocco@gmail.com<br />
+              </p>
+              <div class="social-links">
                 <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
                 <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+                <a href="#" class="instagram"
+                  ><i class="fa fa-instagram"></i
+                ></a>
+                <a href="#" class="google-plus"
+                  ><i class="fa fa-google-plus"></i
+                ></a>
                 <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
               </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </footer>
+    <!-- #footer -->
 
-  </footer><!-- #footer -->
+    <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
-  <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
+    <!-- JavaScript Libraries -->
+    <script src="../../lib/jquery/jquery.min.js"></script>
+    <script src="../../lib/jquery/jquery-migrate.min.js"></script>
+    <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../lib/easing/easing.min.js"></script>
+    <script src="../../lib/superfish/hoverIntent.js"></script>
+    <script src="../../lib/superfish/superfish.min.js"></script>
+    <script src="../../lib/wow/wow.min.js"></script>
+    <script src="../../lib/venobox/venobox.min.js"></script>
+    <script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
 
-  <!-- JavaScript Libraries -->
-  <script src="../../lib/jquery/jquery.min.js"></script>
-  <script src="../../lib/jquery/jquery-migrate.min.js"></script>
-  <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../../lib/easing/easing.min.js"></script>
-  <script src="../../lib/superfish/hoverIntent.js"></script>
-  <script src="../../lib/superfish/superfish.min.js"></script>
-  <script src="../../lib/wow/wow.min.js"></script>
-  <script src="../../lib/venobox/venobox.min.js"></script>
-  <script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
-
-  <!-- Template Main Javascript File -->
-  <script src="../../js/main.js"></script>
-</body>
-
+    <!-- Template Main Javascript File -->
+    <script src="../../js/main.js"></script>
+  </body>
 </html>
