--- a/pages/contact.html
+++ b/pages/contact.html
@@ -73,13 +73,15 @@
                   <a class="dropdown-item"  href="calls/3mt.html">Call for 3MT</a>
                   <a class="dropdown-item"  href="calls/dataChallenge.html">Call for Data challenge</a>
                   <a class="dropdown-item"  href="calls/demos.html">Call for demos</a>
-                  <a class="dropdown-item"  href="calls/Sponsorship.html">Call for Sponsorship</a>
               </div>
           </li>
           <li><a href="program.html">Program</a></li>
-          <li><a href="registration.html">Registration</a></li>
-          <li><a href="venue.html">Venue</a></li>
-          <li class="menu-active"><a href="#" class="menu-active">Contact</a></li>
+            <li><a href="registration.html">Registration</a></li>
+            <li><a href="sponsorship.html">Sponsorship</a></li>
+            <li><a href="venue.html">Venue</a></li>
+            <li class="menu-active">
+              <a href="#" class="menu-active">Contact</a>
+            </li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
