--- a/pages/event/tutorials.html
+++ b/pages/event/tutorials.html
@@ -72,14 +72,14 @@
                   <a class="dropdown-item"  href="../calls/papers.html">Call for papers</a>
                   <a class="dropdown-item"  href="../calls/3mt.html">Call for 3MT</a>
                   <a class="dropdown-item"  href="../calls/dataChallenge.html">Call for Data challenge</a>
-                  <a class="dropdown-item"  href="../calls/demos.html">Call for demos</a>
-                  <a class="dropdown-item"  href="../calls/Sponsorship.html">Call for Sponsorship</a>
+                  <a class="dropdown-item"  href="../calls/tutorials.html">Call for Tutorials</a>
               </div>
           </li>
-          <li><a href="../program.html">Program</a></li>
-          <li><a href="../registration.html">Registration</a></li>
-          <li><a href="../venue.html">Venue</a></li>
-          <li><a href="../contact.html">Contact</a></li>
+                      <li><a href="../program.html">Program</a></li>
+            <li><a href="../registration.html">Registration</a></li>
+            <li><a href="../sponsorship.html">Sponsorship</a></li>
+            <li><a href="../venue.html">Venue</a></li>
+            <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
