--- a/index1985.html
+++ b/index1985.html
@@ -72,13 +72,13 @@
                   <a class="dropdown-item"  href="pages/calls/papers.html">Call for papers</a>
                   <a class="dropdown-item"  href="pages/calls/3mt.html">Call for 3MT</a>
                   <a class="dropdown-item"  href="pages/calls/dataChallenge.html">Call for Data challenge</a>
-                  <a class="dropdown-item"  href="pages/calls/demos.html">Call for demos</a>
-                  <a class="dropdown-item"  href="pages/calls/Sponsorship.html">Call for Sponsorship</a>
+                  <a class="dropdown-item"  href="pages/calls/tutorials.html">Call for Tutorials</a>
               </div>
           </li>
         </li>
         <li><a href="pages/program.html">Program</a></li>
         <li><a href="pages/registration.html">Registration</a></li>
+        <li><a href="pages/sponsorship.html">Sponsorship</a></li>
         <li><a href="pages/venue.html">Venue</a></li>
         <li><a href="pages/contact.html">Contact</a></li>
         </ul>
