--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -173,10 +173,9 @@
               <li>April 14, 2019 : Registration</li>
               <li>April 29-30, 2019 : Conference</li>
             </ul>
-
             <a
               href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
-              class="btn btn-outline-primary btn-lg"
+              class="poster-btn scrollto"
               >Apply for 3MT</a
 
           </div>
