--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -175,7 +175,7 @@
             </ul>
             <a
               href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
-              class="poster-btn scrollto"
+              class="btn btn-outline-primary btn-lg"
               >Apply for 3MT</a
 
           </div>
