--- a/pages/calls/papers.html
+++ b/pages/calls/papers.html
@@ -229,7 +229,7 @@
 
             <a
               href="https://goo.gl/forms/RXQegeSDzhrDShSf2"
-              class="poster-btn scrollto"
+              class="btn btn-outline-primary btn-lg"
               >Submit a Paper</a
             >
           </div>
