Fixing some details

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
           <div class="col-lg-6">              
             <h2>About The Event</h2>
             <p class="text-justify">        
-Deep Learning IndabaX-Morocco is a two days event that will bring advanced knowledge of Machine Learning and Deep Learning to students, researchers and industry professionals. The event will bring together experts from across the country to expose students
+Deep Learning IndabaX-Morocco is a two days event that will bring advanced knowledge in Machine Learning and Deep Learning to students, researchers and industry professionals. The event will bring together experts from across the country to expose students
 to state-of-the-art methods and practical skills.
 <br>
 IndabaX-Morrocco is a way to experiment with the ways in which we can strengthen our Machine Learning community, and to allow more people to contribute to the conversation.
 <br>
-This event will be organized for the first time in Morocco at the Faculty of Sciences and Techniques of Mohammedia (FSTM) in order to spread knowledge and builds capacity in machine learning.
+This event will be organized for the first time in Morocco at the Faculty of Sciences and Techniques of Mohammedia (FSTM) in order to spread knowledge and build capacity in machine learning.
 <br>
 <br>
 <b>Objectives:</b>
@@ -129,7 +129,7 @@ This event will be organized for the first time in Morocco at the Faculty of Sci
           </div>
           <div class="col-lg-3">
             <h3>Where</h3>
-            <p>University of Hassan II Casablanca, Faculty of Sciences and Techniques (FST) of Mohammedia, Conference Center</p>
+            <p>University of Hassan II Casablanca,<br> FST Mohammedia,<br> Conference Center</p>
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
@@ -302,13 +302,24 @@ This event will be organized for the first time in Morocco at the Faculty of Sci
 
               <strong>Email:</strong> indabaXmorocco@gmail.com<br>
             </p>
+            <!--
+            <div class="social-links">
+                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+                <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+                <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+            </div>-->
             
           </div>
         </div>
+
       </div>
+
     </div>
 
   </footer><!-- #footer -->
+
 
   <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
