--- a/pages/event/awards.html
+++ b/pages/event/awards.html
@@ -123,18 +123,7 @@
         <div class="row">
           <div class="col-sm-6 footer-info">
             <img src="../../img/logo.png" alt="TheEvenet">
-            <p class="text-justify">
-                Deep Learning IndabaX-Morocco is a two days event that will bring advanced knowledge
-                of Machine Learning and Deep Learning to students, researchers and industry professionals. 
-                The event will bring together experts from across the country to expose students
-                to state-of-the-art methods and practical skills.
-                IndabaX-Morrocco is a way to experiment with the ways in which we can strengthen
-                our Machine Learning community, and to allow more people to contribute to the con-
-                versation.
-                This event will be organized for the rst time in Morocco at the Faculty of Sciences
-                and Techniques of Mohammedia in order to spread knowledge and builds capacity in
-                machine learning.
-            </p>
+            
           </div>
 
           <div class="col-sm-3">
@@ -142,19 +131,14 @@
           <div class="col-sm-3">
             <h4>Contact Us</h4>
             <p>
-              Department of Informatics <br>
+              Department of Computer Science <br>
               FST Mohammedia<br>
               Morocco <br>
-              <strong>Phone:</strong> +212 61 89 55 48 85<br>
+            <strong>Phone:</strong> +212 672 07 91 41<br>
+
               <strong>Email:</strong> indabaXmorocco@gmail.com<br>
             </p>
-            <div class="social-links">
-                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-                <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-              </div>
+            
           </div>
         </div>
       </div>
